Bug 516300 - Behaviour of Payer/Payee widget on Transaction Editor when using Enter to move between fields
Summary: Behaviour of Payer/Payee widget on Transaction Editor when using Enter to mov...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: git (master)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-19 12:14 UTC by Paul Worrall
Modified: 2026-02-20 12:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2026-02-19 12:14:38 UTC
SUMMARY
There is an inconsistency between using Enter and using Tab to move between fields on the transaction form.  The behaviour when using Tab is preferred.

STEPS TO REPRODUCE
1. Set KMyMoney to "Use Enter to move between fields"
2. Start a new transaction
3. Focus the Payer/Payee widget
4. Start typing some characters that only partially match an existing payee
5. Press Enter

OBSERVED RESULT
On pressing Enter the characters entered in step 4 are deleted and the focus stays in the empty Payer/Payee widget

EXPECTED RESULT
The same behaviour as when using Tab to move between fields, i.e. The partially-matched entry that's highlighted in the drop-down is entered into the widget, and the "Autofill transaction" dialog appears.


SOFTWARE/OS VERSIONS
KMyMoney: 5.2.70-2b847d994
Akonadi: Unknown (build against 6.6.41)
Alkimia: 8.2.70 (build against 8.2.70)
Aqbanking: Unknown (build against 6.9.1)
Gpgme: Unknown (build against 2.0.0)
Gwenhywfar: Unknown (build against 5.14.1)
KDiagram: Unknown (build against )
libical: Unknown (build against 3.0.20)
libofx: Unknown (build against 0.10.9)
SQLCipher: Unknown (build against 3.46.1)
KDE Frameworks: 6.24.0
Qt: Using 6.10.2 and built against 6.10.2
Arch Linux (Wayland)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.18.9-arch1-2
Comment 1 Brendan 2026-02-19 15:42:17 UTC
I can confirm this behavior.
Comment 2 Thomas Baumgart 2026-02-19 18:35:40 UTC
Git commit b0f84c8008d18c83c9c8eb6861c628c31579f235 by Thomas Baumgart.
Committed on 19/02/2026 at 18:34.
Pushed by tbaumgart into branch 'master'.

Select payee from completer popup with return key

This also adjusts the functionality of the split editor
to provide the same feature.
FIXED-IN: 5.2.2

M  +114  -17   kmymoney/views/newspliteditor.cpp
M  +16   -0    kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/b0f84c8008d18c83c9c8eb6861c628c31579f235
Comment 3 Thomas Baumgart 2026-02-20 12:35:58 UTC
Git commit efb6724e53127cb823cc3bcc8fcf3f8c05cc53f6 by Thomas Baumgart.
Committed on 20/02/2026 at 10:14.
Pushed by tbaumgart into branch '5.2'.

Select payee from completer popup with return key

This also adjusts the functionality of the split editor
to provide the same feature.
FIXED-IN: 5.2.2
(cherry picked from commit b0f84c8008d18c83c9c8eb6861c628c31579f235) and
(cherry picked from commit 6e519caae884c7578a84f885205685face665122)

M  +117  -20   kmymoney/views/newspliteditor.cpp
M  +16   -0    kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/efb6724e53127cb823cc3bcc8fcf3f8c05cc53f6