Select payee from completer popup with return key

This also adjusts the functionality of the split editor
to provide the same feature.

BUG: 516300
FIXED-IN: 5.2.2
(cherry picked from commit b0f84c8008d18c83c9c8eb6861c628c31579f235) and
(cherry picked from commit 6e519caae884c7578a84f885205685face665122)